Adding route changePassword
